--- a/php.ini
+++ b/php.ini
@@ -1,6 +1,6 @@
 
-google_app_engine.enable_curl_lite = “1″ 
+google_app_engine.enable_curl_lite = "1" 
 
-extension = “curl.so” 
+extension = "curl.so"
 
-output_buffering = On
+output_buffering = "On"
